--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.13.1"
   },
   "devDependencies": {
